# RobotNAO-ProyectoDeGrado

Entorno-Robot-NAO/: .env.example  .gitignore  README.md  compile.sh  lanzar_stack_nao.sh  run_mock_stack.sh  run_robot_stack.sh
Entorno-Robot-NAO/config/: sample_feedback_event.json
Entorno-Robot-NAO/docs/: ARQUITECTURA_ROBOT.md  CONTRATO_EVENTO_ROBOT.md  INTEGRACION_BACKEND.md
Entorno-Robot-NAO/scripts/: send_sample_event.py
Entorno-Robot-NAO/src/nao_behavior_renderer/: package.xml  setup.cfg  setup.py
Entorno-Robot-NAO/src/nao_behavior_renderer/nao_behavior_renderer/: __init__.py  behavior_renderer_node.py
Entorno-Robot-NAO/src/nao_behavior_renderer/resource/: nao_behavior_renderer
Entorno-Robot-NAO/src/nao_dialogue_manager/: package.xml  setup.cfg  setup.py
Entorno-Robot-NAO/src/nao_dialogue_manager/nao_dialogue_manager/: dialogue_manager_node.py
Entorno-Robot-NAO/src/nao_ds_bridge/: package.xml  setup.cfg  setup.py
Entorno-Robot-NAO/src/nao_ds_bridge/nao_ds_bridge/: __init__.py  http_feedback_bridge.py
Entorno-Robot-NAO/src/nao_ds_bridge/resource/: nao_ds_bridge
Entorno-Robot-NAO/src/nao_pedagogical_planner/: package.xml  setup.cfg  setup.py
Entorno-Robot-NAO/src/nao_pedagogical_planner/nao_pedagogical_planner/: __init__.py  pedagogical_planner_node.py
Entorno-Robot-NAO/src/nao_pedagogical_planner/resource/: nao_pedagogical_planner
Entorno-Robot-NAO/src/nao_robot_bringup/: package.xml  setup.cfg  setup.py
Entorno-Robot-NAO/src/nao_robot_bringup/launch/: mock_stack.launch.py  robot_stack.launch.py
Entorno-Robot-NAO/src/nao_robot_bringup/resource/: nao_robot_bringup
Entorno-Robot-NAO/src/nao_speech_to_text/: package.xml  setup.cfg  setup.py
Entorno-Robot-NAO/src/nao_speech_to_text/nao_speech_to_text/: speech_to_text_node.py
