<?xml version="1.0"?>
<package format="3">
  <name>nao_behavior_renderer</name>
  <version>0.1.0</version>
  <description>Executes canonical NAO behavior plans using NAOqi services, with mock mode.</description>
  <maintainer email="d.mora@uniandes.edu.co">David Mora</maintainer>
  <license>Academic</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>naoqi_utilities_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

