<?xml version="1.0"?>
<package format="3">
  <name>nao_ds_bridge</name>
  <version>0.1.0</version>
  <description>HTTP bridge that receives DS-Visualizer pedagogical feedback events and publishes them to ROS2.</description>
  <maintainer email="d.mora@uniandes.edu.co">David Mora</maintainer>
  <license>Academic</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

