<?xml version="1.0"?>
<package format="3">
  <name>nao_speech_to_text</name>
  <version>0.1.0</version>
  <description>Head-touch controlled speech-to-text bridge for NAO dialogue.</description>
  <maintainer email="d.mora@uniandes.edu.co">David Mora</maintainer>
  <license>Academic</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>naoqi_bridge_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
